package org.example.TEMA6.Practica1;

/**
 *
 * @author david
 * @version 1.2
 *
 * En esta clase se ejecutará todo. La clase llama al método de tienda "iniciarPago()" y se procede a ejecutar todo.
 *
 */
public class AppEcommerce {

    static void main(String[] args) {

        Tienda.iniciarPago();

    }

}
