@startuml

' Clase abstracta MetodoPago
abstract class MetodoPago {
    + {abstract} procesarPago(importe: double): void
}

' Clase Tarjeta
class Tarjeta {
    - {static} tiposTarjeta: String[]
    - nro_tarjeta: String
    - tipo: String
    + Tarjeta(nro_tarjeta: String, tipo: String)
    + procesarPago(importe: double): void
    + validarTarjeta(): boolean
    + getNro_tarjeta(): String
    + setNro_tarjeta(nro_tarjeta: String): void
    + getTipo(): String
    + setTipo(tipo: String): void
}

' Clase Paypal
class Paypal {
    - cuenta: String
    - saldo: double
    + Paypal(cuenta: String)
    + procesarPago(importe: double): void
    + validarPaypal(): boolean
    + saldoSuficiente(importe: double): boolean
    + getCuenta(): String
    + setCuenta(cuenta: String): void
    + getSaldo(): double
    + setSaldo(saldo: double): void
}

' Clase Bizum
class Bizum {
    - {static} aleatorio: Random
    - telefono: String
    - pin: int
    + Bizum(telefono: String)
    - generarPin(): void
    + procesarPago(importe: double): void
    + validarBizum(pin: int): boolean
    + getTelefono(): String
    + setTelefono(telefono: String): void
    + getPin(): int
    + setPin(pin: int): void
}

' Clase Tienda
class Tienda {
    + {static} read: Scanner
    + {static} iniciarPago(): void
    + {static} realizarPago(metodo: MetodoPago): void
    - {static} switchMetodos(metodo: String): void
}

' Clase AppEcommerce
class AppEcommerce {
    + {static} main(args: String[]): void
}

' ─── HERENCIA ───
MetodoPago <|-- Tarjeta
MetodoPago <|-- Paypal
MetodoPago <|-- Bizum

' ─── DEPENDENCIA: Tienda crea 0..1 de cada método ───
Tienda "1" ..> "0..1" Tarjeta   : <<create>>
Tienda "1" ..> "0..1" Paypal    : <<create>>
Tienda "1" ..> "0..1" Bizum     : <<create>>

' ─── USO POLIMÓRFICO: realizarPago recibe MetodoPago ───
Tienda "1" ..> "1" MetodoPago   : <<use>>

' ─── AppEcommerce inicia Tienda ───
AppEcommerce "1" ..> "1" Tienda : <<use>>

@enduml